# based

./: .clang-format  .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: coverage.cmake  install-config.cmake  install-rules.cmake  lint.cmake  variables.cmake
example/: CMakeLists.txt  algorithm.cpp  empty_example.cpp  functional.cpp  instrumentation.cpp  list.cpp  template.cpp  type_traits.cpp
include/based/: algorithm.hpp  assert.hpp  based.hpp  count.hpp  enum.hpp  format.hpp  functional.hpp  instrumentation.hpp  integer.hpp  iterator.hpp  list.hpp  macros.hpp  string.hpp  template.hpp  type_traits.hpp  utility.hpp
include/based/algorithm/: clamp.hpp  max.hpp  min.hpp
include/based/algorithms/: clamp.hpp  max.hpp  min.hpp
include/based/char/: character.hpp  mapper.hpp
include/based/char/is/: alnum.hpp  (+5 more)
include/based/character/: format.hpp  mapper.hpp  type.hpp
include/based/concept/: callable.hpp  is_arithmetic.hpp  is_array.hpp  is_assignable.hpp  is_base_of.hpp  is_bool_testable.hpp  is_castable.hpp  is_class.hpp  is_const.hpp  is_constructible.hpp  is_convertible.hpp  is_copy_assignable.hpp  is_copy_constructible.hpp  is_destructible.hpp  is_enum.hpp  is_floating_point.hpp  is_function.hpp  is_integral.hpp  is_invocable.hpp  is_lvalue_reference.hpp  is_member_pointer.hpp  is_move_assignable.hpp  is_move_constructible.hpp  is_null_pointer.hpp  is_object.hpp  is_pointer.hpp  is_reference_wrapper.hpp  is_referenceable.hpp  is_regular.hpp  is_rvalue_reference.hpp  is_same.hpp  is_scalar.hpp  is_semiregular.hpp  is_swappable.hpp  is_union.hpp  is_void.hpp  iterator.hpp
include/based/concepts/: callable.hpp  iterator.hpp
include/based/container/: array.hpp  list.hpp  vector.hpp
include/based/enum/: enum.hpp  enum_flag.hpp
include/based/functional/: curry.hpp  function.hpp  invoke.hpp  overload.hpp  predicate.hpp  reference_wrapper.hpp
include/based/instrumentation/: instrumented.hpp  registry.hpp  table.hpp  timer.hpp
include/based/integral/: format.hpp  literals.hpp  strong.hpp  types.hpp
include/based/iterator/: concept.hpp  traits.hpp  types.hpp
include/based/macro/: foreach.hpp  foreach_1.hpp  foreach_2.hpp  get_macro.hpp
include/based/memory/: addressof.hpp  allocator.hpp  nullptr.hpp
include/based/string/: format.hpp  literal.hpp  to_string.hpp
include/based/trait/: add_const.hpp  add_cv.hpp  add_lvalue_reference.hpp  add_pointer.hpp  add_rvalue_reference.hpp  add_volatile.hpp  conditional.hpp  decay.hpp  enable_if.hpp  integral_constant.hpp  invoke_result.hpp  iterator.hpp  remove_const.hpp  remove_cv.hpp  remove_cvref.hpp  remove_extent.hpp  remove_pointer.hpp  remove_reference.hpp  remove_volatile.hpp  signature.hpp  type_identity.hpp  void.hpp
include/based/type_traits/: integral_constant.hpp  iterator.hpp  signature.hpp  type_identity.hpp
include/based/types/: builder.hpp  limits.hpp  literals.hpp  strong.hpp  types.hpp
include/based/utility/: buffer.hpp  declvar.hpp  forward.hpp  make_static.hpp  move.hpp  scopeguard.hpp  static_view.hpp  uncaught_exception.hpp
source/: based.cpp  instrumentation.cpp
test/: CMakeLists.txt
test/source/: buffer_test.cpp  callable_test.cpp  count_if_n_test.cpp  count_if_test.cpp  count_n_test.cpp  count_test.cpp  curry_test.cpp  enum_flag_test.cpp  enum_test.cpp  find_if_n_test.cpp  find_if_test.cpp  find_if_unguarded_test.cpp  find_mismatch_n_test.cpp  find_mismatch_test.cpp  find_n_test.cpp  find_test.cpp  for_each_n_test.cpp  for_each_test.cpp  function_test.cpp  list_test.cpp  max_element_test.cpp  max_test.cpp  min_element_test.cpp  min_test.cpp  minmax_element_test.cpp  partition_test.cpp  reduce_test.cpp  scopeguard_test.cpp  signature_test.cpp  standard_traits_test.cpp  string_literal_test.cpp
test/source/algorithm/: max_test.cpp  min_test.cpp
test/source/algorithms/: all_test.cpp  count_if_not_test.cpp  count_if_test.cpp  count_not_test.cpp  count_test.cpp  find_adjacent_mismatch_test.cpp  find_if_not_test.cpp  find_if_test.cpp  find_mismatch_test.cpp  find_not_test.cpp  find_test.cpp  foreach_test.cpp  lower_bound_test.cpp  max_element_test.cpp  max_test.cpp  min_element_test.cpp  min_test.cpp  minmax_element_test.cpp  none_test.cpp  not_all_test.cpp  partition_point_test.cpp  partitioned_test.cpp  reduce_test.cpp  some_test.cpp  upper_bound_test.cpp
test/source/char/: mapper_test.cpp
test/source/character/: mapper_test.cpp
test/source/concept/: callable_test.cpp  is_array_test.cpp  is_base_of_test.cpp  is_class_test.cpp  is_const_test.cpp  is_enum_test.cpp  is_lvalue_reference_test.cpp  is_null_pointer_test.cpp  is_rvalue_reference_test.cpp  is_void_test.cpp
test/source/concepts/: callable_test.cpp
test/source/container/: array_test.cpp  list_test.cpp  vector_test.cpp
test/source/enum/: bitmask_test.cpp  standard_test.cpp
test/source/functional/: curry_test.cpp  function_test.cpp
test/source/integral/: limits_test.cpp  literals_test.cpp  strong_type_test.cpp  type_i16_test.cpp  type_i32_test.cpp  type_i64_test.cpp  type_i8_test.cpp  type_test.cpp  type_u16_test.cpp  type_u32_test.cpp  type_u64_test.cpp  type_u8_test.cpp
test/source/string/: format_test.cpp  literal_test.cpp
test/source/trait/: invoke_result_test.cpp  is_array_test.cpp  is_base_of_test.cpp  is_class_test.cpp  is_const_test.cpp  is_enum_test.cpp  is_lvalue_reference_test.cpp  is_null_pointer_test.cpp  is_rvalue_reference.cpp  is_rvalue_reference_test.cpp  is_void_test.cpp  remove_const_test.cpp  remove_cv_test.cpp  remove_cvref.cpp  remove_cvref_test.cpp  remove_pointer_test.cpp  remove_reference_test.cpp  remove_volatile.cpp  remove_volatile_test.cpp  signature_test.cpp  signature_test_test.cpp
test/source/type_traits/: remove_const.cpp  remove_cv.cpp  remove_cvref.cpp  remove_pointer.cpp  remove_reference.cpp  remove_volatile.cpp  signature_test.cpp
test/source/types/: limits.cpp  literals.cpp  strong_type_test.cpp  type_test.cpp
test/source/utility/: buffer_test.cpp  scopeguard_test.cpp  static_view_test.cpp
(+124 files in other folders)
